frontend/tests/cases/positive/instanceWithPredicateWhichPreventsOverlap-2.gr
interface Simple (n : Nat) (m : Nat)

instance Simple 1 0

-- this should not overlap with the previous instance (1>0)
instance {n<m} => Simple n m
