frontend/tests/cases/negative/interfaces/overlapping/instanceWithPredicateOverlaps.gr
interface Simple (n : Nat) (m : Nat)

instance {n<m} => Simple n m

-- this should overlap with the previous instance (0<1)
instance Simple 0 1
